--- a/MATRIX.conf
+++ b/MATRIX.conf
@@ -1,4 +1,6 @@
-# > 2023.03.05 12:05
+# > QuantumultX配置
+# > 2023.03.06 16:16
+
 [general]
 # > 网络检查
 network_check_url=http://www.apple.com
@@ -118,8 +120,8 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 # > 苹果服务
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
-# > 国际网络
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=国际网络, force-policy=全球加速, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
+# > 全球加速
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=全球加速, force-policy=全球加速, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
 [rewrite_local]
 # > Sub-Store
@@ -128,7 +130,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 
 [rewrite_remote]
 # > 伟人会员集
-# > 自行订阅集https://raw.githubusercontent.com/WeiRen0/NewFree/main/QuantumultX2#profile=001
+# > 开解析器添加重写https://raw.githubusercontent.com/WeiRen0/NewFree/main/QuantumultX2#profile=001
 
 # > 墨鱼去广告
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf, tag=墨鱼去广告, update-interval=172800, opt-parser=false, enabled=true
@@ -180,8 +182,8 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, host=b
 
 [mitm]
 # > 生成证书会在生成对应信息PASSPHRASE和P12
-passphrase = 
-p12 = 
+# passphrase = 
+# p12 = 
 
 # > 跳过验证证书
 skip_validating_cert=false
