--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,1 +1,205 @@
+# > QuantumultX 配置
 
+# > 2023.03.21 20:00
+
+[general]
+# > 网络检查
+network_check_url=http://bing.com/
+
+# > 服务器检查
+server_check_url=http://cp.cloudflare.com/generate_204
+
+# > 服务器检查超时
+server_check_timeout=3000
+
+# > 配置文件图标
+profile_img_url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/master/Matrix/Profile/A-004.PNG
+
+# > 运行模式触发
+# running_mode_trigger=filter, filter, Wi-Fi-1:all_proxy, Wi-Fi-2:all_direct
+
+# > 地理位置检查
+geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-location-with-script.js
+
+# > 资源解析器
+resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+
+# > 排除路线
+excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
+
+# > DNS排除列表
+dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
+
+# > UPD丢弃列表
+udp_drop_list=443
+
+[dns]
+# > 禁用系统DNS/禁用IPv6
+no-system
+no-ipv6
+
+# > 自定义DNS服务器
+server=223.5.5.5
+server=119.29.29.29
+server=114.114.114.114
+
+[policy]
+# > 苹果服务
+static=苹果服务, direct, proxy, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+
+# > 港台番剧
+static=港台番剧, direct, proxy, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
+
+# > 国内影视
+static=国内影视, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingCN.png
+
+# > 国际媒体
+static=国际媒体, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
+
+# > 全球加速
+static=全球加速, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
+
+# > 黑白名单
+static=黑白名单, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+
+# > 自动选择
+url-latency-benchmark=自动选择, server-tag-regex=^(.(?!(〃◉′ω`◉〃)))*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
+
+# > 香港节点
+url-latency-benchmark=香港节点, server-tag-regex=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+
+# > 台湾节点
+url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台湾|台|TW|(?i)Taiwan))^((?!(香港|日本|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+
+# > 日本节点
+url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|日|JP|(?i)Japan))^((?!(香港|台湾|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+
+# > 韩国节点
+url-latency-benchmark=韩国节点, server-tag-regex=(?=.*(韩国|韩|KR|(?i)SouthKorea))^((?!(香港|台湾|日本|新加坡|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+
+# > 狮城节点
+url-latency-benchmark=狮城节点, server-tag-regex=(?=.*(新加坡|狮|SG|(?i)Singapore))^((?!(香港|台湾|日本|韩国|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+
+# > 美国节点
+url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+
+[server_local]
+# > 本地服务器
+
+[server_remote]
+# > 远程服务器
+
+[filter_local]
+# > 最终规则
+FINAL, 黑白名单
+
+[filter_remote]
+# > 规则修正
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Direct/Direct.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
+
+# > 规则拦截
+https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge2.txt, tag=规则拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
+
+# > 微信规则
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
+
+# > 国际抖音
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/TikTok/TikTok.list, tag=国际抖音, force-policy=国际媒体, update-interval=172800, opt-parser=false, enabled=true
+
+# > 国际媒体
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/GlobalMedia/GlobalMedia.list, tag=国际媒体, force-policy=国际媒体, update-interval=172800, opt-parser=false, enabled=true
+
+# > 哔哩哔哩
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/BiliBili/BiliBili.list, tag=哔哩哔哩, force-policy=港台番剧, update-interval=172800, opt-parser=false, enabled=true
+
+# > 国内影视
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/ChinaMedia/ChinaMedia.list, tag=国内影视, force-policy=国内影视, update-interval=172800, opt-parser=false, enabled=true
+
+# > 苹果服务
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=false, enabled=true
+
+# > 全球加速
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=全球加速, force-policy=全球加速, update-interval=172800, opt-parser=false, enabled=true
+
+# > 局部域网
+FILTER_LAN, tag=局部域网, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
+
+# > 国内规则
+FILTER_REGION, tag=国内规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
+
+[rewrite_local]
+# > Sub-Store
+^https?:\/\/sub\.store\/((download)|api\/(preview|sync|(utils\/node-info))) url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-1.min.js
+^https?:\/\/sub\.store url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-0.min.js
+
+[rewrite_remote]
+# > 抖音免拔卡
+https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok-TW.conf, tag=抖音免拔卡, update-interval=172800, opt-parser=false, enabled=true
+
+# > 哔站去广告
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf, tag=哔站去广告, update-interval=172800, opt-parser=false, enabled=true
+
+# > 油管去广告
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf, tag=油管去广告, update-interval=172800, opt-parser=false, enabled=true
+
+# > 微博去广告
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf, tag=微博去广告, update-interval=172800, opt-parser=false, enabled=true
+
+# > 知乎去广告
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.snippet, tag=知乎去广告, update-interval=172800, opt-parser=false, enabled=true
+
+# > 墨鱼去广告
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf, tag=墨鱼去广告, update-interval=172800, opt-parser=false, enabled=true
+
+# > 张军去广告
+https://raw.githubusercontent.com/fmz200/wool_scripts/main/QuantumultX/rewrite/chongxie.txt, tag=张军去广告, update-interval=172800, opt-parser=false, enabled=true
+
+# > 爬虫去广告
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Advertising/Advertising.conf, tag=爬虫去广告, update-interval=172800, opt-parser=false, enabled=true
+
+# > 爬虫重定向
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Redirect/Redirect.conf, tag=爬虫重定向, update-interval=172800, opt-parser=false, enabled=true
+
+# > BoxJs商店
+https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs商店, update-interval=172800, opt-parser=false, enabled=true
+
+[task_local]
+# > 媒体解锁查询
+event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/streaming-ui-check.js, tag=媒体解锁查询, img-url=play.circle.system, enabled=true
+
+# > 策略流量查询
+event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/traffic-check.js, tag=策略流量查询, img-url=arrow.up.arrow.down.circle.system, enabled=true
+
+# > 地理位置查询
+event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/geo_location.js, tag=地理位置查询, img-url=location.circle.system, enabled=true
+
+# > 节点信息查询
+event-interaction https://api.343.re/freedom/rule/quanx/script/ipinfo.js, tag=节点信息查询, img-url=star.circle.system, enabled=true
+
+# > 谷歌送中查询
+event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/switch-check-google.js, tag=谷歌送中查询, img-url=drop.circle.system, enabled=true
+
+# > 网易音乐查询
+event-interaction https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/TaskLocal/NeteaseMusicUnlockCheck.js, tag=网易音乐查询, img-url=lock.circle.system, enabled=true
+
+# > 代理链路检测
+event-interaction https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/NodeLinkCheck/Script/NodeLinkCheck.js, tag=代理链路检测, img-url=link.circle.system, enabled=true
+
+[http_backend]
+# > BoxJs使用HTTP_backend设置的详细教程链接
+# > https://chavyleung.gitbook.io/boxjs/
+https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, host=boxjs.com, tag=BoxJS, path=^/, enabled=false
+
+[mitm]
+# > 生成证书会在生成对应信息PASSPHRASE和P12
+# passphrase = 
+# p12 = 
+
+# > 跳过验证证书
+skip_validating_cert=false
+
+# > 强制SNI域名
+force_sni_domain_name=false
+
+# > HOSTNAME是主机名多个主机名用英文逗号分隔
+hostname=-consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com, sub.store
