--- a/Surge/Matrix3.conf
+++ b/Surge/Matrix3.conf
@@ -10,7 +10,7 @@ test-timeout = 3
 # > 网络诊断
 internet-test-url = http://bing.com/
 # > 代理测速
-proxy-test-url = http://www.gstatic.com/generate_204
+proxy-test-url = http://cp.cloudflare.com/generate_204
 # > 排除简单主机名
 exclude-simple-hostnames = true
 # > IPv6 支持
@@ -18,9 +18,9 @@ ipv6 = false
 # > DNS 服务器
 dns-server = 223.5.5.5, 119.29.29.29, 114.114.114.114
 # > Wi-Fi 助理
-wifi-assist = true
+wifi-assist = false
 # > GEOIP 数据库
-geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
+geoip-maxmind-url = https://github.com/Masaiki/GeoIP2-CN/raw/release/Country.mmdb
 # > 拒绝页面显示错误
 show-error-page-for-reject = true
 # > 跳过代理
@@ -44,9 +44,9 @@ hide-crash-reporter-request = 0
 
 [Proxy Group]
 # 自行选择
-自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=订阅链接
+自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=🔴订阅链接🔴
 # 自动选择
-自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=订阅链接
+自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, include-other-group=自行选择
 # 苹果服务
 苹果服务 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 # 谷歌服务
@@ -77,28 +77,34 @@ hide-crash-reporter-request = 0
 美国节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
 
 [Rule]
+# > 规则修正
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Direct/Direct.list,DIRECT
 # > 微信直连
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat_Resolve.list,DIRECT
+# > 速度测试
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,速度测试
+# > 国际抖音
+RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Surge/TikTok.list,国际媒体
 # > 国际媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list,国际媒体
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list,国际媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Resolve.list,国际媒体
 # > 港台番剧
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,港台番剧
 # > 国内媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMedia/ChinaMedia.list,国内媒体
 # > 苹果服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,苹果服务
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Domain.list,苹果服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Resolve.list,苹果服务
 # > 谷歌服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,谷歌服务
 # > 全球加速
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,全球加速
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,全球加速
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Resolve.list,全球加速
 # > 局域网络
 RULE-SET,LAN,DIRECT
 # > 最终规则
 GEOIP,CN,DIRECT
-FINAL,黑白名单,dns-failed
+FINAL,黑白名单
 
 [URL Rewrite]
 ^https?://(www.)?(g|google).cn https://www.google.com 302
