--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,6 +1,6 @@
 # > QuantumultX 配置
 
-# > 2023.03.21 20:00
+# > 2023.03.23 18:40
 
 [general]
 # > 网络检查
@@ -18,7 +18,8 @@ profile_img_url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/m
 # > 运行模式触发
 # running_mode_trigger=filter, filter, Wi-Fi-1:all_proxy, Wi-Fi-2:all_direct
 
-# > 地理位置检查
+# > 地理位置检查(二选一)
+# geo_location_checker=disabled
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-location-with-script.js
 
 # > 资源解析器
