更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,10 +1,10 @@
 # > QuantumultX 配置
 
-# > 2023.03.23 18:40
+# > 2023.03.24 03:00
 
 [general]
 # > 网络检查
-network_check_url=http://bing.com/
+network_check_url=http://www.apple.com
 
 # > 服务器检查
 server_check_url=http://cp.cloudflare.com/generate_204
@@ -98,8 +98,8 @@ FINAL, 黑白名单
 # > 规则修正
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Direct/Direct.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
-# > 规则拦截
-https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge2.txt, tag=规则拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
+# > 广告拦截
+https://raw.githubusercontent.com/fmz200/wool_scripts/main/QuantumultX/filter/fenliu.list, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 
 # > 微信规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
