更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,6 +1,6 @@
 # > QuantumultX 配置
 
-# > 2023.03.24 03:00
+# > 2023.03.24 17:45
 
 [general]
 # > 网络检查
@@ -46,25 +46,25 @@ server=114.114.114.114
 
 [policy]
 # > 苹果服务
-static=苹果服务, direct, proxy, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+static=苹果服务, direct, proxy, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 
 # > 港台番剧
-static=港台番剧, direct, proxy, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
+static=港台番剧, direct, proxy, 自选节点, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
 
 # > 国内影视
-static=国内影视, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingCN.png
+static=国内影视, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingCN.png
 
 # > 国际媒体
-static=国际媒体, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
+static=国际媒体, proxy, direct, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 
 # > 全球加速
-static=全球加速, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
+static=全球加速, proxy, direct, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 
 # > 黑白名单
-static=黑白名单, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+static=黑白名单, proxy, direct, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
-# > 自动选择
-url-latency-benchmark=自动选择, server-tag-regex=^(.(?!(〃◉′ω`◉〃)))*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
+# > 自选节点
+url-latency-benchmark=自选节点, server-tag-regex=^(.(?!(〃◉′ω`◉〃)))*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
 
 # > 香港节点
 url-latency-benchmark=香港节点, server-tag-regex=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
