更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -134,7 +134,7 @@ FILTER_REGION, tag=国内规则, force-policy=direct, update-interval=172800, op
 ^https?:\/\/sub\.store url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-0.min.js
 
 [rewrite_remote]
-# > 抖音免拔卡
+# > 抖音免拔卡(自行抓包TikTok21版)
 https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok-TW.conf, tag=抖音免拔卡, update-interval=172800, opt-parser=false, enabled=true
 
 # > 哔站去广告
