--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,6 +1,6 @@
 # > QuantumultX 配置
-# > 2023.03.24 17:45
-# > [+]OpenAI策略与规则
+# > 2023.03.27 10:05
+# > [-]ui互交脚本
 
 [general]
 # > 网络检查
@@ -46,28 +46,28 @@ server=114.114.114.114
 
 [policy]
 # > 苹果服务
-static=苹果服务, direct, proxy, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+static=苹果服务, direct, proxy, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 
 # > OpenAI
-static=Open-AI, proxy, direct, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix/Color/OpenAI-1.png
+static=Open-AI, proxy, direct, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix/Color/OpenAI-1.png
 
 # > 港台番剧
-static=港台番剧, direct, proxy, 自选节点, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
+static=港台番剧, direct, proxy, 优选节点, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
 
 # > 国内影视
 static=国内影视, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingCN.png
 
 # > 国际媒体
-static=国际媒体, proxy, direct, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
+static=国际媒体, proxy, direct, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 
 # > 全球加速
-static=全球加速, proxy, direct, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
+static=全球加速, proxy, direct, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 
 # > 黑白名单
-static=黑白名单, proxy, direct, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+static=黑白名单, proxy, direct, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
-# > 自选节点
-url-latency-benchmark=自选节点, server-tag-regex=^(.(?!(〃◉′ω`◉〃)))*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
+# > 优选节点
+url-latency-benchmark=优选节点, server-tag-regex=^(.(?!(网易云|NetEase)))*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
 
 # > 香港节点
 url-latency-benchmark=香港节点, server-tag-regex=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
@@ -177,17 +177,11 @@ event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/
 # > 策略流量查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/traffic-check.js, tag=策略流量查询, img-url=arrow.up.arrow.down.circle.system, enabled=true
 
-# > 地理位置查询
-event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/geo_location.js, tag=地理位置查询, img-url=location.circle.system, enabled=true
-
 # > 节点信息查询
 event-interaction https://api.343.re/freedom/rule/quanx/script/ipinfo.js, tag=节点信息查询, img-url=star.circle.system, enabled=true
 
 # > 谷歌送中查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/switch-check-google.js, tag=谷歌送中查询, img-url=drop.circle.system, enabled=true
-
-# > 网易音乐查询
-event-interaction https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/TaskLocal/NeteaseMusicUnlockCheck.js, tag=网易音乐查询, img-url=lock.circle.system, enabled=true
 
 # > 代理链路检测
 event-interaction https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/NodeLinkCheck/Script/NodeLinkCheck.js, tag=代理链路检测, img-url=link.circle.system, enabled=true
