更新 Matrix5.conf

--- a/Loon/Matrix5.conf
+++ b/Loon/Matrix5.conf
@@ -1,6 +1,6 @@
 # > Loon 配置
 
-# > 2023-03-07 14:33
+# > 2023-03-28 14:55
 
 [General]
 # > 接口模式
@@ -17,15 +17,6 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 
 # > DNS服务器
 dns-server = system,119.29.29.29,114.114.114.114,223.5.5.5
-
-# > DoH服务器
-# doh-server = 
-
-# > DoQ服务器
-# doq-server = 
-
-# > DoH3服务器
-# doh3-server =
  
 # > 是否允许wifi下共享网络
 allow-wifi-access = false
@@ -45,9 +36,6 @@ test-timeout = 3
 # > 资源解析器
 resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/dist/sub-store-parser.loon.min.js
 
-# > SSID触发器
-# ssid-trigger = SSID:DIRECT
-
 # 以下配置的域名不会使用fakeip进行映射
 real-ip = *.apple.com, *apple.com
 
@@ -61,10 +49,6 @@ switch-node-after-failure-times = 3
 # > 订阅节点
 
 [Remote Filter]
-# > NodeSelect    使用在UI上选择的节点
-# > NameKeyword   根据提供的关键词筛选
-# > NameRegex     根据提供的正则式筛选
-
 # > 全部节点
 全部 = NameRegex, FilterKey = "^"
 
@@ -87,20 +71,11 @@ switch-node-after-failure-times = 3
 美国 = NameRegex, FilterKey = "(?i)(美国|美|US|United States)"
 
 [Proxy Group]
-# > SELECT策略组使用策略取决于UI选择
-# > SSID策略组使用策略取决于SSID名字
-# > URL-TEST策略组选择最优代理服务器
-# > FALLBACK策略组选择第一个可用节点
-# > LOAD-BALANCE策略组均衡负载选择子策略
-
 # > 自行选择
 自行选择 = select,全部,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 
 # > 苹果服务
 苹果服务 = select,DIRECT,REJECT,自行选择,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-
-# > 速度测试
-速度测试 = select,DIRECT,REJECT,自行选择,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Speedtest.png
 
 # > 港台番剧
 港台番剧 = select,DIRECT,REJECT,自行选择,自动选择,香港节点,台湾节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
@@ -139,10 +114,8 @@ switch-node-after-failure-times = 3
 美国节点 = url-test,美国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 
 [Rule]
-# > 本地规则:GEOIP规则
+# > 本地规则:最终规则
 GEOIP,CN,DIRECT
-
-# > 本地规则:GEOIP规则
 FINAL,黑白名单
 
 [Remote Rule]
@@ -160,9 +133,6 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 
 # > 远程规则:微信直连
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true
-
-# > 远程规则:速度测试
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=速度测试, tag=速度测试, enabled=true
 
 # > 远程规则:国际媒体
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=国际媒体, tag=国际媒体, enabled=true
@@ -192,27 +162,14 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaASN/ChinaASN.list, policy=DIRECT, tag=国内网站, enabled=true
 
 [Rewrite]
-# > 重写
 
 [Host]
-# > 可以指定以下四种模式：
-# > 1、指定域名使用对应的IP地址
-# > 2、将域名指向另一个域名
-# > 3、指定域名请求DNS时使用特定的DNS服务器
-# > 4、指定具体的SSID环境下使用特定的DNS服务器
 
 [Script]
-# > http-request     处理请求的脚本
-# > http-response    处理请求响应的脚本
-# > cron             定时脚本
-# > network-changed  网络发生变化触发脚本
-# > generic          通用型脚本可用在操作节点/策略组中，执行是会带入节点名称和策略组名称，脚本必须在开启NE时
 
 [Remote Script]
-# > 远程脚本
 
 [Plugin]
-# > 插件
 
 [MITM]
 # > 生成证书会在生成CA-PASSPHRASE与CA-P12信息
