更新 Matrix3.conf

--- a/Loon/Matrix3.conf
+++ b/Loon/Matrix3.conf
@@ -1,6 +1,6 @@
 # > Loon 配置
 
-# > 2023-02-18 18:20
+# > 2023-03-28 15:00
 
 [General]
 # > 接口模式
@@ -142,10 +142,8 @@ switch-node-after-failure-times = 3
 美国节点 = url-test,美国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 
 [Rule]
-# > 本地规则:GEOIP规则
+# > 本地规则:最终规则
 GEOIP,CN,DIRECT
-
-# > 本地规则:GEOIP规则
 FINAL,黑白名单
 
 [Remote Rule]
