更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,6 +1,7 @@
-# > QuantumultX 配置
-# > 2023.03.27 10:05
-# > [-]ui互交脚本
+# > QuantumultX配置 By Matrix3
+# > (必须)不可删/(可选)可以删
+# > 2023.03.29 22:00
+# > [-]策略/规则/重写
 
 [general]
 # > 网络检查
@@ -48,9 +49,6 @@ server=114.114.114.114
 # > 苹果服务
 static=苹果服务, direct, proxy, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 
-# > OpenAI
-static=Open-AI, proxy, direct, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Color/OpenAI-1.png
-
 # > 港台番剧
 static=港台番剧, direct, proxy, 优选节点, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
 
@@ -94,96 +92,93 @@ url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美国|美|US|(?i)Uni
 # > 远程服务器
 
 [filter_local]
-# > 最终规则
+# > 最终规则(必须)
 FINAL, 黑白名单
 
 [filter_remote]
-# > 规则修正
+# > 规则修正(必须)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Direct/Direct.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
-# > 广告拦截
+# > 广告拦截(可选)
 https://raw.githubusercontent.com/fmz200/wool_scripts/main/QuantumultX/filter/fenliu.list, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 
-# > 微信规则
+# > 微信规则(可选)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
-# > OpenAI
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/OpenAI.list, tag=Open-AI, force-policy=Open-AI, update-interval=172800, opt-parser=false, enabled=true
-
-# > 国际抖音
+# > 国际抖音(可选)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/TikTok/TikTok.list, tag=国际抖音, force-policy=国际媒体, update-interval=172800, opt-parser=false, enabled=true
 
-# > 国际媒体
+# > 国际媒体(必须)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/GlobalMedia/GlobalMedia.list, tag=国际媒体, force-policy=国际媒体, update-interval=172800, opt-parser=false, enabled=true
 
-# > 哔哩哔哩
+# > 哔哩哔哩(可选)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/BiliBili/BiliBili.list, tag=哔哩哔哩, force-policy=港台番剧, update-interval=172800, opt-parser=false, enabled=true
 
-# > 国内影视
+# > 国内影视(可选)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/ChinaMedia/ChinaMedia.list, tag=国内影视, force-policy=国内影视, update-interval=172800, opt-parser=false, enabled=true
 
-# > 苹果服务
+# > 苹果服务(可选)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=false, enabled=true
 
-# > 全球加速
+# > 全球加速(必须)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=全球加速, force-policy=全球加速, update-interval=172800, opt-parser=false, enabled=true
 
-# > 局部域网
+# > 局部域网(必须)
 FILTER_LAN, tag=局部域网, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
-# > 国内规则
+# > 国内规则(必须)
 FILTER_REGION, tag=国内规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
 [rewrite_local]
-# > Sub-Store
+# > Sub-Store(可选)
 ^https?:\/\/sub\.store\/((download)|api\/(preview|sync|(utils\/node-info))) url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-1.min.js
 ^https?:\/\/sub\.store url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-0.min.js
 
 [rewrite_remote]
-# > 抖音免拔卡(自行抓包TikTok21版)
+# > 抖音免拔卡(自行抓包TikTok21版)(可选)
 https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok-TW.conf, tag=抖音免拔卡, update-interval=172800, opt-parser=false, enabled=true
 
-# > 哔站去广告
+# > 哔站去广告(可选)
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf, tag=哔站去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 油管去广告
+# > 油管去广告(可选)
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf, tag=油管去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 微博去广告
+# > 微博去广告(可选)
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf, tag=微博去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 知乎去广告
+# > 知乎去广告(可选)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.snippet, tag=知乎去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 墨鱼去广告
+# > 墨鱼去广告(可选)
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf, tag=墨鱼去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 张军去广告
+# > 张军去广告(可选)
 https://raw.githubusercontent.com/fmz200/wool_scripts/main/QuantumultX/rewrite/chongxie.txt, tag=张军去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 爬虫去广告
+# > 爬虫去广告(可选)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Advertising/Advertising.conf, tag=爬虫去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 爬虫重定向
+# > 爬虫重定向(可选)
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Redirect/Redirect.conf, tag=爬虫重定向, update-interval=172800, opt-parser=false, enabled=true
 
-# > BoxJs商店
+# > BoxJs商店(可选)
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs商店, update-interval=172800, opt-parser=false, enabled=true
 
 [task_local]
-# > 媒体解锁查询
+# > 媒体解锁查询(可选)
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/streaming-ui-check.js, tag=媒体解锁查询, img-url=play.circle.system, enabled=true
 
-# > 策略流量查询
+# > 策略流量查询(可选)
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/traffic-check.js, tag=策略流量查询, img-url=arrow.up.arrow.down.circle.system, enabled=true
 
-# > 节点信息查询
+# > 节点信息查询(可选)
 event-interaction https://api.343.re/freedom/rule/quanx/script/ipinfo.js, tag=节点信息查询, img-url=star.circle.system, enabled=true
 
-# > 谷歌送中查询
+# > 谷歌送中查询(可选)
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/switch-check-google.js, tag=谷歌送中查询, img-url=drop.circle.system, enabled=true
 
-# > 代理链路检测
+# > 代理链路检测(可选)
 event-interaction https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/NodeLinkCheck/Script/NodeLinkCheck.js, tag=代理链路检测, img-url=link.circle.system, enabled=true
 
 [http_backend]
