--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,7 +1,6 @@
 # > QuantumultX配置 By Matrix3
-# > (必须)不可删/(可选)可以删
+
 # > 2023.03.29 22:00
-# > [-]策略/规则/重写
 
 [general]
 # > 网络检查
@@ -92,93 +91,93 @@ url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美国|美|US|(?i)Uni
 # > 远程服务器
 
 [filter_local]
-# > 最终规则(必须)
+# > 最终规则
 FINAL, 黑白名单
 
 [filter_remote]
-# > 规则修正(必须)
+# > 规则修正
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Direct/Direct.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
-# > 广告拦截(可选)
-https://raw.githubusercontent.com/fmz200/wool_scripts/main/QuantumultX/filter/fenliu.list, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
+# > 广告拦截
+https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 
-# > 微信规则(可选)
+# > 微信规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
-# > 国际抖音(可选)
+# > 国际抖音
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/TikTok/TikTok.list, tag=国际抖音, force-policy=国际媒体, update-interval=172800, opt-parser=false, enabled=true
 
-# > 国际媒体(必须)
+# > 国际媒体
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/GlobalMedia/GlobalMedia.list, tag=国际媒体, force-policy=国际媒体, update-interval=172800, opt-parser=false, enabled=true
 
-# > 哔哩哔哩(可选)
+# > 哔哩哔哩
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/BiliBili/BiliBili.list, tag=哔哩哔哩, force-policy=港台番剧, update-interval=172800, opt-parser=false, enabled=true
 
-# > 国内影视(可选)
+# > 国内影视
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/ChinaMedia/ChinaMedia.list, tag=国内影视, force-policy=国内影视, update-interval=172800, opt-parser=false, enabled=true
 
-# > 苹果服务(可选)
+# > 苹果服务
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=false, enabled=true
 
-# > 全球加速(必须)
+# > 全球加速
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=全球加速, force-policy=全球加速, update-interval=172800, opt-parser=false, enabled=true
 
-# > 局部域网(必须)
+# > 局部域网
 FILTER_LAN, tag=局部域网, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
-# > 国内规则(必须)
+# > 国内规则
 FILTER_REGION, tag=国内规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
 [rewrite_local]
-# > Sub-Store(可选)
+# > Sub-Store
 ^https?:\/\/sub\.store\/((download)|api\/(preview|sync|(utils\/node-info))) url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-1.min.js
 ^https?:\/\/sub\.store url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-0.min.js
 
 [rewrite_remote]
-# > 抖音免拔卡(自行抓包TikTok21版)(可选)
+# > 抖音免拔卡(自行抓包TikTok21版)
 https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok-TW.conf, tag=抖音免拔卡, update-interval=172800, opt-parser=false, enabled=true
 
-# > 哔站去广告(可选)
+# > 哔站去广告
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf, tag=哔站去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 油管去广告(可选)
+# > 油管去广告
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf, tag=油管去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 微博去广告(可选)
+# > 微博去广告
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf, tag=微博去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 知乎去广告(可选)
+# > 知乎去广告
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.snippet, tag=知乎去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 墨鱼去广告(可选)
+# > 墨鱼去广告
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf, tag=墨鱼去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 张军去广告(可选)
+# > 张军去广告
 https://raw.githubusercontent.com/fmz200/wool_scripts/main/QuantumultX/rewrite/chongxie.txt, tag=张军去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 爬虫去广告(可选)
+# > 爬虫去广告
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Advertising/Advertising.conf, tag=爬虫去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 爬虫重定向(可选)
+# > 爬虫重定向
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Redirect/Redirect.conf, tag=爬虫重定向, update-interval=172800, opt-parser=false, enabled=true
 
-# > BoxJs商店(可选)
+# > BoxJs商店
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs商店, update-interval=172800, opt-parser=false, enabled=true
 
 [task_local]
-# > 媒体解锁查询(可选)
+# > 媒体解锁查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/streaming-ui-check.js, tag=媒体解锁查询, img-url=play.circle.system, enabled=true
 
-# > 策略流量查询(可选)
+# > 策略流量查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/traffic-check.js, tag=策略流量查询, img-url=arrow.up.arrow.down.circle.system, enabled=true
 
-# > 节点信息查询(可选)
+# > 节点信息查询
 event-interaction https://api.343.re/freedom/rule/quanx/script/ipinfo.js, tag=节点信息查询, img-url=star.circle.system, enabled=true
 
-# > 谷歌送中查询(可选)
+# > 谷歌送中查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/switch-check-google.js, tag=谷歌送中查询, img-url=drop.circle.system, enabled=true
 
-# > 代理链路检测(可选)
+# > 代理链路检测
 event-interaction https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/NodeLinkCheck/Script/NodeLinkCheck.js, tag=代理链路检测, img-url=link.circle.system, enabled=true
 
 [http_backend]
