更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,6 +1,8 @@
 # > QuantumultX配置 By Matrix3
 
-# > 2023.03.29 22:00
+# > 2023.03.31 14:31 UTC/GMT+8
+
+# > [+] DoH3 DoH
 
 [general]
 # > 网络检查
@@ -39,10 +41,16 @@ udp_drop_list=443
 no-system
 no-ipv6
 
+# > DNSoverHTTP/3
+# prefer-doh3
+
 # > 自定义DNS服务器
 server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
+
+# > 自定义DoH服务器
+# doh-server=https://dns.alidns.com/dns-query
 
 [policy]
 # > 苹果服务
