更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,8 +1,8 @@
 # > QuantumultX配置 By Matrix3
 
-# > 2023.03.31 14:31 UTC/GMT+8
+# > 2023.04.01 00:55 UTC/GMT+8
 
-# > [+] DoH3 DoH
+# > [/] ...
 
 [general]
 # > 网络检查
@@ -37,19 +37,19 @@ dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.
 udp_drop_list=443
 
 [dns]
-# > 禁用系统DNS/禁用IPv6
+# > 禁用系统DNS/IPv6
 no-system
 no-ipv6
 
-# > DNSoverHTTP/3
+# > DNS-over-HTTP/3
 # prefer-doh3
 
-# > 自定义DNS服务器
+# > 自定义DNS的服务器
 server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
 
-# > 自定义DoH服务器
+# > 自定义DoH的服务器
 # doh-server=https://dns.alidns.com/dns-query
 
 [policy]
