更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -44,12 +44,12 @@ no-ipv6
 # > DNS-over-HTTP/3
 # prefer-doh3
 
-# > 自定义DNS的服务器
+# > 自定义的DNS服务器
 server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
 
-# > 自定义DoH的服务器
+# > 自定义的DoH服务器
 # doh-server=https://dns.alidns.com/dns-query
 
 [policy]
