更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -2,7 +2,7 @@
 
 # > 2023.04.01 00:55 UTC/GMT+8
 
-# > [/] ...
+# > [+] DoH与DoQ服务器(默认注释)按需启用
 
 [general]
 # > 网络检查
@@ -44,13 +44,16 @@ no-ipv6
 # > DNS-over-HTTP/3
 # prefer-doh3
 
-# > 自定义的DNS服务器
+# > 自定义DNS服务器
 server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
 
-# > 自定义的DoH服务器
-# doh-server=https://dns.alidns.com/dns-query
+# > 自定义DoH服务器
+# doh-server=https://223.5.5.5/dns-query, https://doh.pub/dns-query
+
+# > 自定义DoQ服务器
+# doq-server=quic://162.14.132.109:853, quic://south.tex0n.net:785
 
 [policy]
 # > 苹果服务
