更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -37,7 +37,7 @@ dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.
 udp_drop_list=443
 
 [dns]
-# > 除非当地ISP有严重的DNS污染问题否则没必要开启[DoH]传统DNS的性能最优网络异常后恢复速度最快
+# > 除非当地ISP有严重的DNS污染问题否则没必要开启[DoH]。传统DNS的性能最优网络异常后恢复速度最快
 # > 设置DoH服务器后所有常规DNS服务器设置被忽略
 # > 设置DoQ服务器后所有常规DNS服务器设置被忽略
 
