更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,8 +1,6 @@
-# > QuantumultX配置 By Matrix3
+# > Quantumult-X配置 By Matrix3
 
-# > 2023.04.01 00:55 UTC/GMT+8
-
-# > [+] DoH与DoQ服务器(默认注释)按需启用
+# > 2023.04.02 16:10 UTC/GMT+8
 
 [general]
 # > 网络检查
@@ -37,15 +35,11 @@ dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.
 udp_drop_list=443
 
 [dns]
-# > 除非当地ISP有严重的DNS污染问题否则没必要开启[DoH]。传统DNS的性能最优网络异常后恢复速度最快
-# > 设置DoH服务器后所有常规DNS服务器设置被忽略
-# > 设置DoQ服务器后所有常规DNS服务器设置被忽略
-
-# > 禁用系统DNS/IPv6
+# > 禁系统DNS/IPv6
 no-system
 no-ipv6
 
-# > DNS-over-HTTP/3
+# > DNSoverHTTP/3
 # prefer-doh3
 
 # > 自定义DNS服务器
