更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,13 +1,19 @@
 # > Quantumult-X配置 By Matrix3
 
-# > 2023.04.02 16:10 UTC/GMT+8
+# > 2023.04.05 15:58 UTC/GMT+8
 
 [general]
 # > 网络检查
 network_check_url=http://www.apple.com
 
+# > 排除路线
+excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
+
 # > 服务器检查
 server_check_url=http://cp.cloudflare.com/generate_204
+
+# > 资源解析器
+resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
 # > 服务器检查超时
 server_check_timeout=3000
@@ -16,30 +22,26 @@ server_check_timeout=3000
 profile_img_url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Matrix/A-008.JPG
 
 # > 运行模式触发
-# running_mode_trigger=filter, filter, Wi-Fi-1:all_proxy, Wi-Fi-2:all_direct
+running_mode_trigger=filter, filter, Matrix3:all_proxy, Matrix5:all_direct
 
-# > 地理位置检查(二选一)
-# geo_location_checker=disabled
+# > 地理位置检查
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-location-with-script.js
-
-# > 资源解析器
-resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
-
-# > 排除路线
-excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
 
 # > DNS排除列表
 dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
+
+# > UDP白名单
+udp_whitelist=1-442, 444-65535
 
 # > UPD丢弃列表
 udp_drop_list=443
 
 [dns]
-# > 禁系统DNS/IPv6
+# > 禁用系统DNS/IPv6
 no-system
 no-ipv6
 
-# > DNSoverHTTP/3
+# > DNS over HTTP/3
 # prefer-doh3
 
 # > 自定义DNS服务器
