更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,19 +1,9 @@
-# > Quantumult-X配置 By Matrix3
-
-# > 2023.04.05 15:58 UTC/GMT+8
-
 [general]
 # > 网络检查
-network_check_url=http://www.apple.com
-
-# > 排除路线
-excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
+network_check_url=http://bing.com/
 
 # > 服务器检查
 server_check_url=http://cp.cloudflare.com/generate_204
-
-# > 资源解析器
-resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
 # > 服务器检查超时
 server_check_timeout=3000
@@ -22,10 +12,17 @@ server_check_timeout=3000
 profile_img_url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Matrix/A-008.JPG
 
 # > 运行模式触发
-running_mode_trigger=filter, filter, Matrix3:all_proxy, Matrix5:all_direct
+# running_mode_trigger=filter, filter, Wi-Fi-1:all_proxy, Wi-Fi-2:all_direct
 
 # > 地理位置检查
+# > geo_location_checker=disabled
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-location-with-script.js
+
+# > 资源解析器
+resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+
+# > 排除路线
+excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
 
 # > DNS排除列表
 dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
@@ -44,56 +41,57 @@ no-ipv6
 # > DNS over HTTP/3
 # prefer-doh3
 
-# > 自定义DNS服务器
+# > 自定义 DNS 服务器
 server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
 
-# > 自定义DoH服务器
+# > 自定义 DoH 服务器
 # doh-server=https://223.5.5.5/dns-query, https://doh.pub/dns-query
 
-# > 自定义DoQ服务器
+# > 自定义 DoQ 服务器
 # doq-server=quic://162.14.132.109:853, quic://south.tex0n.net:785
 
 [policy]
+static=Open-AI, direct, proxy, reject
 # > 苹果服务
-static=苹果服务, direct, proxy, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+static=苹果服务, direct, proxy, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 
 # > 港台番剧
-static=港台番剧, direct, proxy, 优选节点, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
+static=港台番剧, direct, proxy, 自动选择, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
 
 # > 国内影视
-static=国内影视, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingCN.png
+static=国内影视, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingCN.png
 
 # > 国际媒体
-static=国际媒体, proxy, direct, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
+static=国际媒体, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 
 # > 全球加速
-static=全球加速, proxy, direct, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
+static=全球加速, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 
 # > 黑白名单
-static=黑白名单, proxy, direct, 优选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+static=黑白名单, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
-# > 优选节点
-url-latency-benchmark=优选节点, server-tag-regex=^(.(?!(网易云|NetEase)))*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
+# > 自动选择
+url-latency-benchmark=自动选择, server-tag-regex=^(.(?!(〃◉′ω`◉〃)))*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
 
 # > 香港节点
-url-latency-benchmark=香港节点, server-tag-regex=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+url-latency-benchmark=香港节点, server-tag-regex=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 
 # > 台湾节点
-url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台湾|台|TW|(?i)Taiwan))^((?!(香港|日本|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台湾|台|TW|(?i)Taiwan))^((?!(香港|日本|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
 
 # > 日本节点
-url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|日|JP|(?i)Japan))^((?!(香港|台湾|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|日|JP|(?i)Japan))^((?!(香港|台湾|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
 
 # > 韩国节点
-url-latency-benchmark=韩国节点, server-tag-regex=(?=.*(韩国|韩|KR|(?i)SouthKorea))^((?!(香港|台湾|日本|新加坡|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+url-latency-benchmark=韩国节点, server-tag-regex=(?=.*(韩国|韩|KR|(?i)SouthKorea))^((?!(香港|台湾|日本|新加坡|美国)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
 
 # > 狮城节点
-url-latency-benchmark=狮城节点, server-tag-regex=(?=.*(新加坡|狮|SG|(?i)Singapore))^((?!(香港|台湾|日本|韩国|美国)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+url-latency-benchmark=狮城节点, server-tag-regex=(?=.*(新加坡|狮|SG|(?i)Singapore))^((?!(香港|台湾|日本|韩国|美国)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 
 # > 美国节点
-url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$, check-interval=1800, tolerance=30, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 
 [server_local]
 # > 本地服务器
@@ -110,7 +108,7 @@ FINAL, 黑白名单
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Direct/Direct.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
 # > 广告拦截
-https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge2.txt, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 
 # > 微信规则
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
@@ -131,21 +129,24 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=false, enabled=true
 
 # > 全球加速
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=全球加速, force-policy=全球加速, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=国际网络, force-policy=全球加速, update-interval=172800, opt-parser=false, enabled=true
 
-# > 局部域网
-FILTER_LAN, tag=局部域网, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
+# > LAN
+FILTER_LAN, tag=局部域网, force-policy=direct, enabled=true
 
-# > 国内规则
-FILTER_REGION, tag=国内规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
+# > GEOIPCN
+FILTER_REGION, tag=国内规则, force-policy=direct, enabled=true
 
 [rewrite_local]
 # > Sub-Store
 ^https?:\/\/sub\.store\/((download)|api\/(preview|sync|(utils\/node-info))) url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-1.min.js
 ^https?:\/\/sub\.store url script-analyze-echo-response https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-0.min.js
 
+# > TF限制解除
+^https?:\/\/testflight\.apple\.com\/v\d\/accounts\/.+?\/install$ url script-request-body https://github.com/Centralmatrix3/Scripts-Rules/raw/Master/QuantumultX/Script/TF-Download.Js
+
 [rewrite_remote]
-# > 抖音免拔卡(自行抓包TikTok21版)
+# > 抖音免拔卡
 https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok-TW.conf, tag=抖音免拔卡, update-interval=172800, opt-parser=false, enabled=true
 
 # > 哔站去广告
@@ -168,9 +169,6 @@ https://raw.githubusercontent.com/fmz200/wool_scripts/main/QuantumultX/rewrite/c
 
 # > 爬虫去广告
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Advertising/Advertising.conf, tag=爬虫去广告, update-interval=172800, opt-parser=false, enabled=true
-
-# > 爬虫重定向
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Redirect/Redirect.conf, tag=爬虫重定向, update-interval=172800, opt-parser=false, enabled=true
 
 # > BoxJs商店
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs商店, update-interval=172800, opt-parser=false, enabled=true
@@ -208,4 +206,4 @@ skip_validating_cert=false
 force_sni_domain_name=false
 
 # > HOSTNAME是主机名多个主机名用英文逗号分隔
-hostname=-consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com, sub.store
+hostname=-consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com, sub.store, testflight.apple.com
