--- a/Surge/Matrix3.conf
+++ b/Surge/Matrix3.conf
@@ -44,7 +44,7 @@ hide-crash-reporter-request = 0
 
 [Proxy Group]
 # 自行选择
-自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=🔴订阅链接🔴
+自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=🔴订阅链接🟢
 # 自动选择
 自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, include-other-group=自行选择
 # 苹果服务
