更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -9,7 +9,7 @@ server_check_url=http://cp.cloudflare.com/generate_204
 server_check_timeout=3000
 
 # > 运行模式触发
-running_mode_trigger=filter, filter, Matrix3:all_proxy, Matrix5:all_direct
+# running_mode_trigger=filter, filter, Wi-Fi1:all_proxy, Wi-Fi2:all_direct
 
 # > 排除路线
 excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
