更新 Matrix3.conf

--- a/Shadowrocket/Matrix3.conf
+++ b/Shadowrocket/Matrix3.conf
@@ -134,8 +134,8 @@ localhost = 127.0.0.1
 
 [MITM]
 # > 生成证书会生成CA-PASSPHRASE与CA-P12信息
-ca-passphrase = 
-ca-p12 = 
+# ca-passphrase = 
+# ca-p12 = 
 
 # > ENABLE
 enable = true
