更新 Matrix5.conf

--- a/Loon/Matrix5.conf
+++ b/Loon/Matrix5.conf
@@ -171,8 +171,8 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 
 [MITM]
 # > 生成证书会在生成CA-PASSPHRASE与CA-P12信息
-ca-p12 =
-ca-passphrase =
+# ca-p12 =
+# ca-passphrase =
 
 # > 主机名
 hostname = *.example.com,*.sample.com
