更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -14,7 +14,7 @@ profile_img_url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/M
 
 # > 地理位置检查(二选一)
 # geo_location_checker=disabled
-geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-location-with-script.js
+geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Script/IP-location.Js
 
 # > 资源解析器
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
