更新 Matrix5.conf

--- a/QuantumultX/Matrix5.conf
+++ b/QuantumultX/Matrix5.conf
@@ -1,5 +1,5 @@
 # > Quantumult-X 矩阵配置 Author:Matrix3
-# > 更新时间:2023-04-18 17:10 UTC/GMT +8
+# > 更新时间:2023-04-27 00:05 UTC/GMT +8
 [general]
 # > 网络检查
 network_check_url=http://www.apple.com
@@ -149,8 +149,10 @@ IP-CIDR, 100.64.0.0/10, DIRECT
 IP-CIDR, 203.107.1.1/24, DIRECT
 IP-CIDR, 183.240.197.130/32, DIRECT
 
-# > 最终规则
+# > 国内规则
 GEOIP, CN, DIRECT
+
+# > 最终规则
 FINAL, 黑白名单
 
 [filter_remote]
@@ -281,11 +283,11 @@ event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/
 # > 策略流量查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/traffic-check.js, tag=策略流量查询, img-url=arrow.up.arrow.down.circle.system, enabled=true
 
-# > 地理位置查询
-event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/geo_location.js, tag=地理位置查询, img-url=location.circle.system, enabled=true
+# > 节点信息查询
+event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/geo_location.js, tag=节点信息查询, img-url=location.circle.system, enabled=true
 
 # > 节点信息查询
-event-interaction https://api.343.re/freedom/rule/quanx/script/ipinfo.js, tag=节点信息查询, img-url=star.circle.system, enabled=true
+event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/server-info-plus.js, tag=节点信息查询, img-url=tag.circle.system, enabled=true
 
 # > 谷歌送中查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/switch-check-google.js, tag=谷歌送中查询, img-url=drop.circle.system, enabled=true
